# rhythm-game

./: LICENSE  README.md  copyrights.md  main.py  pyproject.toml  requirements.txt
assets/: README.md  coldplay.json  nekozilla.json  testsong.json
doc/example_gifs/: __init__.py
ext/: __init__.py  ext_events.py  music.py  music_events.py
models/: __init__.py  background.py  beatvisualizer.py  conductor.py  endscene.py  floor.py  fpsscene.py  label.py  music.py  music_events.py  note.py  player.py  song.py  tile.py  zone.py
