[tool.poetry]
name = "rhythm-game"
version = "0.1.0"
description = ""
authors = ["MujyKun <mujy@irenebot.com>", "DrewBieger"]

[tool.poetry.dependencies]
python = "^3.10"
#ppb = "^1.1"
#ppb = {git = "https://github.com/MujyKun/pursuedpybear.git"}
#black = "^22.10.0"
#pysdl2-dll = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
